# seval

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.cargo/: audit.toml
.claude/skills/: changelog.md  github-issue.md  github-pr.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: README.md  ci.yml  codeql.yml  homebrew.yml  osv-scanner.yml  release.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/09-agent-definitions-and-loading/: 09-01-SUMMARY.md  09-02-SUMMARY.md
.planning/phases/10-agent-execution-and-result-communication/: 10-01-SUMMARY.md  10-02-SUMMARY.md  10-03-SUMMARY.md  10-04-SUMMARY.md
scripts/ci/: rust_quality_gate.sh  rust_strict_delta_gate.sh
src/: action.rs  app.rs  cli.rs  colors.rs  errors.rs  lib.rs  logging.rs  main.rs  pipe.rs
src/agents/: executor.rs  mod.rs  types.rs
src/agents/builtin/: code-reviewer.md  recon-agent.md  security-analyzer.md
src/ai/: codex_auth.rs  codex_model.rs  compression.rs  mod.rs  provider.rs  streaming.rs  system_prompt.rs
src/approval/: display.rs  hook.rs  mod.rs
src/chat/: agents.rs  approval.rs  commands.rs  component.rs  context.rs  input.rs  markdown.rs  message.rs  mod.rs  model_picker.rs  persistence.rs  rendering.rs  sessions.rs  syntax.rs  tools.rs  verbs.rs
src/config/: defaults.rs  mod.rs  types.rs
src/session/: db.rs  import_export.rs  memory_tool.rs  mod.rs  models.rs  search_tool.rs
src/tools/: edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  process.rs  read.rs  shell.rs  spawn_agent.rs  web_fetch.rs  web_search.rs  write.rs
src/tui/: home.rs  mod.rs  sidebar.rs  terminal.rs
src/tui/wizard/: input.rs  mod.rs  rendering.rs
tests/: chatgpt_integration.rs  config_integration.rs  event_loop.rs  signal_handling.rs  startup.rs
