[package]
name = "seval"
version = "0.1.2"
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.91"
description = "AI-powered offensive security assistant for pentesting, red teaming, and infrastructure audits"
repository = "https://github.com/Hari-Nagarajan/seval"
homepage = "https://github.com/Hari-Nagarajan/seval"
readme = "README.md"
keywords = ["cli", "tui", "ai", "security", "llm"]
categories = ["command-line-utilities"]
exclude = [".github/", ".githooks/", ".seval/", "assets/"]

[lib]
name = "seval"
path = "src/lib.rs"

[[bin]]
name = "seval"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.30", features = ["crossterm", "serde", "macros"] }
crossterm = { version = "0.29", features = ["event-stream", "serde"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "1.0"
futures = "0.3"
tokio-util = "0.7"
strum = { version = "0.28", features = ["derive"] }
directories = "6"
signal-hook = "0.4"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
rig-core = "0.32"
pulldown-cmark = { version = "0.13", default-features = false }
syntect = { version = "5.2", features = ["default-syntaxes", "default-themes"] }
tiktoken-rs = "0.9"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
rig-bedrock = { version = "0.4.1", features = ["bedrock-rustls"] }
aws-sdk-bedrockruntime = "1.128.0"
aws-config = "1.8.15"
ignore = "0.4"
globset = "0.4"
regex = "1"
html2text = "0.16"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
urlencoding = "2.1.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[dev-dependencies]
libc = "0.2"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
async-stream = "0.3"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
missing_panics_doc = "allow"
